# Lidar

./: CMakeLists.txt  README.md  READ_ME
app/: detect.cpp  empty.cpp
src/src/: C3iroboticsLidar.cpp  CCountDown.cpp  CLidarPacketReceiver.cpp  CSerialConnection.cpp  CSimulateSerial.cpp
